--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 	</header>
 	<br>
 	<div class="container">
+		<div class = "gallery">
+			<img src="img/Joker (2).jpg" alt="Joker" onclick="onClick(this)" style="width:100%;cursor:pointer" class="w3-hover-opacity">
+				<div class="desc">Joker</div>
+			</div>
 	<div class = "gallery">
 		<img src="img/Solitude.jpg" alt="Solitude" onclick="onClick(this)" style="width:100%;cursor:pointer" class="w3-hover-opacity">
 			<div class="desc">Solitude</div>
